# Vox-In.

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  App.tsx  README.md  build_output.txt  geminiService.ts  index.css  index.html  metadata.json  package-lock.json  package.json  tauriService.ts  tsconfig.json  types.ts  vite.config.ts  vox-intelligence-pro-v3.apk.sha256
.github/workflows/: android-release.yml  check.yml  ci.yml
components/: AnalysisCard.tsx  DeepfakeAnalysisCard.tsx  FileUploader.tsx  Header.tsx  LogFeed.tsx  MetadataCard.tsx  OnboardingBYOK.tsx  PlaybackControls.tsx  ReportNavigator.tsx  SpeakerProfilesCard.tsx  Spectrogram.tsx  SpliceDetectionCard.tsx  TranscriptionCard.tsx  WaveformVisualizer.tsx
components/desktop/: DesktopView.tsx
components/mobile/: MobileKit.tsx
hooks/: useAnalysis.ts  useAndroidBack.ts  useAudio.ts  useAudioController.ts  useLogger.ts  useRecorder.ts  useTauriEvents.ts
i18n/: translations.ts
scripts/: sign_apk_v2.ps1
services/: tauriService.ts
src/: App.tsx  router.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  keychain.rs  lib.rs
src/components/: AnalysisCard.tsx  DeepfakeAnalysisCard.tsx  FileUploader.tsx  Header.tsx  LogFeed.tsx  MetadataCard.tsx  OnboardingBYOK.tsx  PlaybackControls.tsx  ReportNavigator.tsx  SpeakerProfilesCard.tsx  Spectrogram.tsx  SpliceDetectionCard.tsx  TranscriptionCard.tsx  WaveformVisualizer.tsx
src/hooks/: useAnalysis.ts  useAudio.ts  (+6 more)
tests/: useLogger.test.ts
(+16 files in other folders)
