[package]
name = "app"
version = "0.1.0"
description = "Vox Intelligence Pro - Audio Forensic Analysis"
authors = ["Vox Intelligence"]
license = "MIT"
repository = "https://github.com/JPatronC92/Vox-In."
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

# Audio processing
hound = "3.5"
sha2 = "0.10"
base64 = "0.22"

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Secure storage for BYOK
tauri-plugin-store = "2"

# Deep link for Share Intent handling
tauri-plugin-deep-link = "2"
